objects/SFDC_Expense_Header__c.object
<CustomObject>
    <description>Individual expense reports.</description>
    <fields>
        <fullName>AR_Invoice_Number__c</fullName>
        <description>for Accounting only</description>
        <label>AR Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>R00N700000029NsMEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>IF( Exlcude_from_Goal__c = False, 
IF( Date_Manager_Approved__c  &lt;= Manager_Goal_Date__c , &quot;Goal Met&quot;, &quot;Goal Missed&quot;),&quot;Goal Met&quot;)</formula>
        <inlineHelpText>formula field that looks at Manager Goal Date and the date manager approved and determines whether the manager approved the expense report</inlineHelpText>
        <label>Manager Goal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Total__c</fullName>
        <label>Approved Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>trigger auto updates this field based on the role of the owner of the expense report - approver = the user&apos;s manager unless their role is trainer, then it uses the User&apos;s Delegated Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_Manager__c</fullName>
        <formula>User__r.Manager.FirstName&amp;&quot; &quot;&amp;User__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field auto populates using a formula that takes the name of the employee&apos;s manager from their user profile</inlineHelpText>
        <label>Approving Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Expenses_to_Dealer__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Travel Coordinator will update this checkbox accordingly, if the option is NO, travel coordinator will  uncheck the box and submit a reason for not billing</inlineHelpText>
        <label>Bill Expenses to Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billed_MRR__c</fullName>
        <formula>Account_Name__r.Billed_Recurring_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the Billed MRR that is sync&apos;d over from MotoSnap to the SF Account Page</inlineHelpText>
        <label>Billed MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chargeback_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chargeback to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Expenses_Billed_to_Dealer__c</fullName>
        <inlineHelpText>updated by Accounting</inlineHelpText>
        <label>Date Expenses Billed to Dealer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Approved__c</fullName>
        <inlineHelpText>updated by the Approval Process when the final approval is selected by the CFO</inlineHelpText>
        <label>Date Final Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Manager_Approved__c</fullName>
        <label>Date Manager Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <inlineHelpText>date user submitted expense report for approval, updated by workflow</inlineHelpText>
        <label>Date Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve__c</fullName>
        <formula>Date_Manager_Approved__c - Date_Submitted_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the # of days between the date submitted for approval and the date the manager approved</inlineHelpText>
        <label># Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Region__c</fullName>
        <formula>Account_Name__r.Territory_Name__c</formula>
        <inlineHelpText>formula field that pulls the Territory name from the Account</inlineHelpText>
        <label>Dealer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <formula>Account_Name__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that is auto-populated from the account</inlineHelpText>
        <label>Dealer #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Department__c</fullName>
        <formula>User__r.Department</formula>
        <inlineHelpText>formula field that reads the Employees department from their SF user profile</inlineHelpText>
        <label>Employee Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name_Non_SFDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup contact or Employee that is not a SFDC user</inlineHelpText>
        <label>Employee Name (Non SFDC)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Title__c</fullName>
        <formula>User__r.Title</formula>
        <inlineHelpText>formula field that reads the employee&apos;s title from their user profile</inlineHelpText>
        <label>Employee Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exlcude_from_Goal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>formula field that is updated by workflow - when the trainer misses their submit goal the record is excluded from the Manager Goal</inlineHelpText>
        <label>Exclude from Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Due_Date__c</fullName>
        <formula>Project__r.Confirmed_Training_End__c +3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that pulls the Confirmed Training End Date from the project and adds 3 days</inlineHelpText>
        <label>Expense Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Report_Paid_Message__c</fullName>
        <description>Message to appear when a user tries to edit or resubmit an expense report that has already been marked &quot;Paid&quot;.</description>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001U7WX&quot;, &quot;Expense&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Report Paid Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_Paid_by_Card__c</fullName>
        <label>Expenses Paid by Card</label>
        <summarizedField>SFDC_Expense_Line_Item__c.Amount_Paid_by_Card__c</summarizedField>
        <summaryForeignKey>SFDC_Expense_Line_Item__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Paid_by_Dealer__c</fullName>
        <formula>IF( Project__r.Training_Expenses_Paid_by_Dealer__c = True, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field reads the same field on the Project</inlineHelpText>
        <label>Expenses Paid by Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_Paid_by_Trainer__c</fullName>
        <formula>Total_Expense_Items__c - Expenses_Paid_by_Card__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenses Paid by Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Help_Information__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001Tx6L&amp;oid=00D700000008zHZ&amp;lastMod=1301690563000&quot;, &quot;Help&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTRUCTIONS__c</fullName>
        <defaultValue>&quot;Add Line Items, Attach Receipts, Submit for Approval&quot;</defaultValue>
        <label>INSTRUCTIONS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email_Address__c</fullName>
        <inlineHelpText>auto populated by a trigger</inlineHelpText>
        <label>Manager Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_For_Approval_old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>not used anymore- submitter&apos;s manager auto-populates to the object effective 12/2010</inlineHelpText>
        <label>Manager For Approval_old</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028Gm2EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Goal_Date__c</fullName>
        <formula>IF( Training_End_Date_Day__c = &quot;Monday&quot;, Training_End_Date__c +8, 
IF( Training_End_Date_Day__c = &quot;Tuesday&quot;, Training_End_Date__c +7, 
IF( Training_End_Date_Day__c = &quot;Wednesday&quot;, Training_End_Date__c +6, 
IF( Training_End_Date_Day__c = &quot;Thursday&quot;, Training_End_Date__c +5, 
IF( Training_End_Date_Day__c = &quot;Friday&quot;, Training_End_Date__c +4, 
IF( Training_End_Date_Day__c = &quot;Saturday&quot;, Training_End_Date__c +3, 
Training_End_Date__c +2))))))</formula>
        <inlineHelpText>formula field that calculates the Manager due date for approval for Goal Reporting for the Director of Implementation</inlineHelpText>
        <label>Manager Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mulitple_Trainers__c</fullName>
        <formula>IF( Project__r.Trainer_2__c !=null, &quot;**YES**&quot;,
IF( Project__r.Trainer_3__c !=null, &quot;**YES**&quot;,
IF( Project__r.Trainer_4__c !=null, &quot;**YES**&quot;,
null
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field is automatically calculated by the system and will return the value of &quot;Yes&quot; if there are values in the Trainer 1,2,3 or 4 fields on the project.</inlineHelpText>
        <label>Are their multiple trainers?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_and_comments__c</fullName>
        <label>Notes and comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that pulls in the Employee Role for reporting</inlineHelpText>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup Project expenses are related to</inlineHelpText>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Travel_Expenses__c</fullName>
        <inlineHelpText>Auto calculated by the System by summing all the expense line items proposed amounts</inlineHelpText>
        <label>Proposed Travel Expenses</label>
        <summarizedField>SFDC_Expense_Line_Item__c.Proposed_Amount__c</summarizedField>
        <summaryForeignKey>SFDC_Expense_Line_Item__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reason_not_billing_expenses_to_Dealer__c</fullName>
        <label>Reason not billing expenses to Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N700000028GlwEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>R00N700000028GmDEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>updated by the system as the expense report moves through the approval process</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by CSMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval By CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval by CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#FF0000</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <formula>Account_Name__r.Super_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Expenses__c</fullName>
        <inlineHelpText>This field is autocalculated and updated upon edit</inlineHelpText>
        <label>Total Approved Expenses</label>
        <summarizedField>SFDC_Expense_Line_Item__c.Approved_AP_Amount__c</summarizedField>
        <summaryForeignKey>SFDC_Expense_Line_Item__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Expenses__c</fullName>
        <formula>IF( Bill_Expenses_to_Dealer__c ,  Total_Expense_Items__c ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field looks at the checkbox &quot;Bill Expenses to Dealer&quot; and only creates a total amount if the box is checked</inlineHelpText>
        <label>Total Billable Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Items__c</fullName>
        <inlineHelpText>This field is autocalculated as line items are added or edited</inlineHelpText>
        <label>Total Expense Items</label>
        <summarizedField>SFDC_Expense_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>SFDC_Expense_Line_Item__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trainer_Goal_Date__c</fullName>
        <formula>IF( Training_End_Date_Day__c = &quot;Monday&quot;, Training_End_Date__c +7, 
IF( Training_End_Date_Day__c = &quot;Tuesday&quot;, Training_End_Date__c +6, 
IF( Training_End_Date_Day__c = &quot;Wednesday&quot;, Training_End_Date__c +5, 
IF( Training_End_Date_Day__c = &quot;Thursday&quot;, Training_End_Date__c +4, 
IF( Training_End_Date_Day__c = &quot;Friday&quot;, Training_End_Date__c +3, 
IF( Training_End_Date_Day__c = &quot;Saturday&quot;, Training_End_Date__c +2, 
Training_End_Date__c +1))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trainer_Submit_Status__c</fullName>
        <formula>IF(!ISBLANK(  Date_Submitted_for_Approval__c  ) &amp;&amp;  Date_Submitted_for_Approval__c  &lt;= Trainer_Goal_Date__c , &quot;Goal Met&quot;, &quot;Goal Missed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer Submit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_End_Date_Day__c</fullName>
        <formula>CASE( MOD( Training_End_Date__c - DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, 
&quot;Enter Training End Date&quot;)</formula>
        <inlineHelpText>formula field that looks at the Training End Date and displays the day of the week</inlineHelpText>
        <label>Training End Date Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_End_Date__c</fullName>
        <formula>Project__r.Confirmed_Training_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that brings the Training End Date into the Expense Report for goal reporting for the Director of Training</inlineHelpText>
        <label>Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028Gm4EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>AwaitingFinanceManagerApproval</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <columns>Status__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Bill_Expenses_to_Dealer__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Approving_Manager__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Final Approval</value>
        </filters>
        <filters>
            <field>Paid__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>Awaiting Finance Manager Approval</label>
        <sharedTo>
            <role>AccountingSupport</role>
            <role>CEO</role>
            <role>VPofImplementationSupport</role>
            <role>VPofSales</role>
            <roleAndSubordinatesInternal>AccountingSupport</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittney_s_View</fullName>
        <columns>User__c</columns>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Approving_Manager__c</columns>
        <columns>Expenses_Paid_by_Trainer__c</columns>
        <columns>Expenses_Paid_by_Card__c</columns>
        <columns>Notes_and_comments__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Status__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approver__c</field>
            <operation>equals</operation>
            <value>Shelli Clark,greg becker,john evans,chris hawthorne</value>
        </filters>
        <label>Brittney&apos;s View</label>
    </listViews>
    <listViews>
        <fullName>Expense_Reports_Pending_Payment</fullName>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Paid__c</columns>
        <columns>Bill_Expenses_to_Dealer__c</columns>
        <columns>Expenses_Paid_by_Trainer__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Expenses_Paid_by_Dealer__c</columns>
        <columns>Expenses_Paid_by_Card__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Paid__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Final Approval by CFO</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SFDC_Expense_Header__c.Process_Expense_Report</value>
        </filters>
        <label>Expense Reports Pending Payment</label>
    </listViews>
    <listViews>
        <fullName>Expenses_Billed_Dealer</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Approving_Manager__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Proposed_Travel_Expenses__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Paid__c</columns>
        <columns>Date_Expenses_Billed_to_Dealer__c</columns>
        <columns>AR_Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Expenses_Billed_to_Dealer__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Final Approval by CFO,Final Approval By CEO</value>
        </filters>
        <filters>
            <field>Proposed_Travel_Expenses__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_Expenses_Billed_to_Dealer__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Expenses Billed to Dealer - This Year</label>
        <sharedTo>
            <role>Controller</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expenses_Pending_Billing_Dealer</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Paid__c</columns>
        <columns>Dealer__c</columns>
        <columns>Proposed_Travel_Expenses__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Mulitple_Trainers__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Project__c</columns>
        <columns>Bill_Expenses_to_Dealer__c</columns>
        <columns>Expenses_Paid_by_Dealer__c</columns>
        <columns>AR_Invoice_Number__c</columns>
        <columns>Date_Expenses_Billed_to_Dealer__c</columns>
        <columns>Reason_not_billing_expenses_to_Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Expenses_Billed_to_Dealer__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Final Approval by CFO,Final Approval By CEO</value>
        </filters>
        <filters>
            <field>Employee_Role__c</field>
            <operation>equals</operation>
            <value>trainer</value>
        </filters>
        <filters>
            <field>Expenses_Paid_by_Dealer__c</field>
            <operation>equals</operation>
            <value>yes</value>
        </filters>
        <filters>
            <field>Bill_Expenses_to_Dealer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Expenses Pending Billing to Dealer</label>
    </listViews>
    <listViews>
        <fullName>JanelPaidReportsYear</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Paid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Week_Ending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Paid__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Janel - Paid Reports This Year</label>
        <sharedTo>
            <role>Trainer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Juanita_s</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Proposed_Travel_Expenses__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Paid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealer__c</columns>
        <columns>AR_Invoice_Number__c</columns>
        <columns>Date_Expenses_Billed_to_Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2012 12:00 AM</value>
        </filters>
        <label>Juanita&apos;s All Expense Reports All</label>
    </listViews>
    <listViews>
        <fullName>My_Expense_Report_s</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Total_Billable_Expenses__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Expenses_Paid_by_Trainer__c</columns>
        <columns>Total__c</columns>
        <filterScope>Mine</filterScope>
        <label>!My Expense Report(s)</label>
    </listViews>
    <listViews>
        <fullName>Trainer_Expense_Reports_In_Progress1</fullName>
        <booleanFilter>(1 or 2) AND 3 and 4</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Approver__c</columns>
        <columns>Approving_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Proposed_Travel_Expenses__c</columns>
        <columns>Total_Expense_Items__c</columns>
        <columns>Paid__c</columns>
        <columns>Bill_Expenses_to_Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Paid__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Paid__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Employee_Role__c</field>
            <operation>equals</operation>
            <value>trainer</value>
        </filters>
        <label>*Trainer Expense Reports - In Progress</label>
    </listViews>
    <nameField>
        <displayFormat>EXP-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Expense Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <recordTypes>
        <fullName>Create_New</fullName>
        <active>true</active>
        <label>Create New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expense_Report_Paid</fullName>
        <active>true</active>
        <description>Cannot be edited by roles other than Controller.</description>
        <label>Expense Report Paid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process_Expense_Report</fullName>
        <active>true</active>
        <label>Process Expense Report</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>